fixing style on mobile

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,1 @@
-.inner-sec-shop {
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-}
+
