--- a/src/assets/css/shop.scss
+++ b/src/assets/css/shop.scss
@@ -1566,9 +1566,6 @@ span.item_price {
   .single-right-left {
     width: 100%;
   }
-  .product-men.women_two {
-    padding: 0 5px;
-  }
   .testimonials_grid {
     margin: 0 auto;
     width: 81%;
